--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,49 @@
 sudo: false
 matrix:
   include:
-  - env: CABALVER=1.18 GHCVER=7.8.4
+  - env: GHCVER=7.0.4
+    addons:
+      apt:
+        packages:
+        - ghc-7.0.4
+        sources:
+        - hvr-ghc
+  - env: GHCVER=7.4.2
+    addons:
+      apt:
+        packages:
+        - ghc-7.4.2
+        sources:
+        - hvr-ghc
+  - env: GHCVER=7.8.4
     addons:
       apt:
         packages:
         - ghc-7.8.4
         sources:
         - hvr-ghc
-  - env: CABALVER=1.22 GHCVER=7.10.3
+  - env: GHCVER=7.10.3
     addons:
       apt:
         packages:
         - ghc-7.10.3
         sources:
         - hvr-ghc
-  - env: CABALVER=1.24 GHCVER=8.0.2
+  - env: GHCVER=8.0.2
     addons:
       apt:
         packages:
         - ghc-8.0.2
         sources:
         - hvr-ghc
-  - env: CABALVER=2.0 GHCVER=8.2.1
+  - env: GHCVER=8.2.1
     addons:
       apt:
         packages:
         - ghc-8.2.1
         sources:
         - hvr-ghc
-  - env: CABALVER=head GHCVER=head
+  - env: GHCVER=head
     addons:
       apt:
         packages:
